--- a/WebContent/resources/css/style.css
+++ b/WebContent/resources/css/style.css
@@ -1,24 +1,32 @@
+/*Global*/
+body {
+	/* background: #FFFAF0; fallback for old browsers
+	background: -webkit-linear-gradient(right, #FFFAF0, #ffffff);
+	background: -moz-linear-gradient(right, #FFFAF0, #ffffff);
+	background: -o-linear-gradient(right, #FFFAF0, #ffffff);
+	background: linear-gradient(to left, #FFFAF0, #ffffff);
+	 */
+	background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAcAAAAHCAYAAADEUlfTAAAAHElEQVQIW2M8duuFDwMOwAiStFKT2IJNftBJAgBoNhrcJEdqSgAAAABJRU5ErkJggg==) repeat;
+	font-family: FontAwesome;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;      
+}
+h1{
+	text-align: center;
+}
+h2{
+	text-align: left;
+}
 #header {
     background-color:black;
     color:white;
     text-align:center;
     padding:5px;
 }
-#nav {
-    line-height:30px;
-    background-color:#eeeeee;
-    padding:5px;
-}
 #section {
     width:100%;
     float:left;
-    padding:10px;
 }
-
-#devicejournaltable thead tr th {
-	text-align:left;
-}
-
 
 #footer {
     background-color:black;
@@ -27,109 +35,234 @@
     text-align:center;
     padding:5px;
 }
-
-.login-page {
-  width: 360px;
-  padding: 8% 0 0;
-  margin: auto;
+#menu {
+	line-height: 30px;
+    background-color: #eeeeee;
+    padding: 0;
+    margin: 0;
 }
-.form {
-  position: relative;
-  z-index: 1;
-  background: #FFFFFF;
-  max-width: 360px;
-  margin: 0 auto 100px;
-  padding: 45px;
-  text-align: left;
-  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
-  border-radius: 15px;
+ul#menu {
+	width: 100%;
+	display: table;
+	table-layout: fixed; 
 }
-.form input {
-  font-family: FontAwesome;
-  outline: 0;
-  background: #f2f2f2;
-  width: 100%;
-  border: 0;
-  margin: 0 0 15px;
-  padding: 15px;
-  box-sizing: border-box;
-  font-size: 14px;
-}
-.form button {
-  font-family: FontAwesome;
-  text-transform: uppercase;
-  outline: 0;
-  background: #4169E1;
-  width: 100%;
-  border: 0;
-  padding: 15px;
-  color: #FFFFFF;
-  font-size: 14px;
-  cursor: pointer;
-  opacity: 1;
-   transition: all .25s ease-in-out;
-   -moz-transition: all .25s ease-in-out;
-   -webkit-transition: all .25s ease-in-out;
-}
-.form button:hover,.form button:active,.form button:focus {
-  opacity: 0.7;
-}
-.form .message {
-  margin: 15px 0 0;
-  color: #b3b3b3;
-  font-size: 12px;
-}
-.form .message a {
-  color: #4CAF50;
-  text-decoration: none;
-}
-.form .register-form {
-  display: none;
-}
-.container {
-  position: relative;
-  z-index: 1;
-  max-width: 300px;
-  margin: 0 auto;
-}
-.container:before, .container:after {
-  content: "";
-  display: block;
-  clear: both;
-}
-.container .info {
-  margin: 50px auto;
-  text-align: center;
-}
-.container .info h1 {
-  margin: 0 0 15px;
-  padding: 0;
-  font-size: 36px;
-  font-weight: 300;
-  color: #1a1a1a;
-}
-.container .info span {
-  color: #4d4d4d;
-  font-size: 12px;
-}
-.container .info span a {
-  color: #000000;
-  text-decoration: none;
-}
-.container .info span .fa {
-  color: #EF3B3A;
-}
-body {
-  background: #FFFAF0; /* fallback for old browsers */
-  background: -webkit-linear-gradient(right, #FFFAF0, #ffffff);
-  background: -moz-linear-gradient(right, #FFFAF0, #ffffff);
-  background: -o-linear-gradient(right, #FFFAF0, #ffffff);
-  background: linear-gradient(to left, #FFFAF0, #ffffff);
-  font-family: FontAwesome;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;      
+ul#menu li {
+    display: table-cell;
+    width: auto;
+    text-align: center;
+    padding: 5px;
 }
 .errormsg{
 	color: red;
 	height: 20px;
+}
+.fullwidth{
+	width: 100%;
+}
+
+/*Login and Forms*/
+.login-page {
+	width: 360px;
+	padding: 8% 0 0;
+	margin: auto;
+}
+.form {
+	position: relative;
+	z-index: 1;
+	background: #FFFFFF;
+	max-width: 360px;
+	margin: 0 auto 100px;
+	padding: 45px;
+	text-align: left;
+	box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+	border-radius: 15px;
+}
+.form input {
+	font-family: FontAwesome;
+	outline: 0;
+	background: #f2f2f2;
+	width: 100%;
+	border: 0;
+	margin: 3px 0 25px;
+	padding: 15px;
+	box-sizing: border-box;
+	font-size: 14px;
+	box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.24);
+}
+.form label {
+    font: 17px normal helvetica;
+}
+.form button {
+	background: #3498db;
+	background-image: -webkit-linear-gradient(top, #3498db, #06466e);
+	background-image: -moz-linear-gradient(top, #3498db, #06466e);
+	background-image: -ms-linear-gradient(top, #3498db, #06466e);
+	background-image: -o-linear-gradient(top, #3498db, #06466e);
+	background-image: linear-gradient(to bottom, #3498db, #06466e);
+	-webkit-border-radius: 5;
+	-moz-border-radius: 5;
+	border-radius: 5px;
+	font:17px normal Helvetica;
+	color: #ffffff;
+	background: #3498db;
+	padding: 10px 20px 10px 20px;
+	border: solid #a0c1d6 2px;
+	text-decoration: none;
+	cursor: pointer;
+	width: 100%;
+	text-transform: uppercase;
+	opacity: 1;
+	transition: all .25s ease-in-out;
+	-moz-transition: all .25s ease-in-out;
+	-webkit-transition: all .25s ease-in-out;
+}
+.form button:hover,.form button:active,.form button:focus {
+	opacity: 0.7;
+}
+.form .message {
+	margin: 15px 0 0;
+	color: #b3b3b3;
+	font-size: 12px;
+}
+.form .message a {
+	color: #4CAF50;
+	text-decoration: none;
+}
+.form .register-form {
+	display: none;
+}
+
+/* Containers */
+.filter {
+    padding:10px;	
+}
+.container {
+	position: relative;
+	z-index: 1;
+	margin: 0 auto;
+    padding:10px;		
+}
+.container:before, .container:after {
+	content: "";
+	display: block;
+	clear: both;
+}
+.container .info {
+	margin: 50px auto;
+	text-align: center;
+}
+.container .info h1 {
+	margin: 0 0 15px;
+	padding: 0;
+	font-size: 36px;
+	font-weight: 300;
+	color: #1a1a1a;
+}
+.container .info span {
+	color: #4d4d4d;
+	font-size: 12px;
+}
+.container .info span a {
+	color: #000000;
+	text-decoration: none;
+}
+.container .info span .fa {
+	color: #EF3B3A;
+}
+
+/*For Grid*/
+.datagrid table { 
+	border-collapse: collapse; 
+	text-align: left; 
+	width: 100%; 
+} 
+.datagrid {
+	font: normal 12px/150% Arial, Helvetica, sans-serif; 
+	background: #fff; 
+	overflow: hidden; 
+	border: 1px solid #006699; 
+	-webkit-border-radius: 3px; 
+	-moz-border-radius: 3px; 
+	border-radius: 3px; 
+}
+.datagrid table td, .datagrid table th { 
+	padding: 3px 10px; 
+}
+.datagrid table thead th {
+	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #006699), color-stop(1, #00557F) );
+	background:-moz-linear-gradient( center top, #006699 5%, #00557F 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#006699', endColorstr='#00557F');
+	background-color:#006699; 
+	color:#ffffff; 
+	font-size: 15px; 
+	font-weight: bold; 
+	border-left: 1px solid #0070A8; 
+} 
+.datagrid table thead th:first-child { 
+	border: none; 
+}
+.datagrid table tbody td { 
+	color: #00496B; 
+	border-left: 1px solid #E1EEF4;
+	font-size: 12px;
+	font-weight: normal; 
+}
+.datagrid table tbody .alt td { 
+	background: #E1EEF4; 
+	color: #00496B; 
+}
+.datagrid table tbody tr:nth-child(odd) { 
+	background: #E1EEF4; 
+	color: #00496B; 
+}
+.datagrid table tbody td:first-child { 
+	border-left: none; 
+}
+.datagrid table tbody tr:last-child td { 
+	border-bottom: none; 
+}
+.datagrid table tfoot td div { 
+	border-top: 1px solid #006699;
+	background: #E1EEF4;
+} 
+.datagrid table tfoot td { 
+	padding: 0; 
+	font-size: 12px 
+} 
+.datagrid table tfoot td div{ 
+	padding: 2px; 
+}
+.datagrid table tfoot td ul { 
+	margin: 0; 
+	padding:0; 
+	list-style: none; 
+	text-align: right; 
+}
+.datagrid table tfoot  li { 
+	display: inline; 
+}
+.datagrid table tfoot li a { 
+	text-decoration: none; 
+	display: inline-block;  
+	padding: 2px 8px; 
+	margin: 1px;
+	color: #FFFFFF;
+	border: 1px solid #006699;
+	-webkit-border-radius: 3px; 
+	-moz-border-radius: 3px; 
+	border-radius: 3px; 
+	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #006699), color-stop(1, #00557F) );
+	background:-moz-linear-gradient( center top, #006699 5%, #00557F 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#006699', endColorstr='#00557F');
+	background-color:#006699; 
+}
+.datagrid table tfoot ul.active, .datagrid table tfoot ul a:hover { 
+	text-decoration: none;
+	border-color: #006699; 
+	color: #FFFFFF; 
+	background: none; 
+	background-color:#00557F;
+}
+div.dhtmlx_window_active, div.dhx_modal_cover_dv { 
+	position: fixed !important; 
 }
