--- a/WebContent/resources/css/style.css
+++ b/WebContent/resources/css/style.css
@@ -266,3 +266,7 @@ ul#menu li {
 div.dhtmlx_window_active, div.dhx_modal_cover_dv { 
 	position: fixed !important; 
 }
+
+#thCenter {
+	text-align:center !important; 
+}
